# solana-trading-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  INFRASTRUCTURE.md  README.md  SEQUENCE_DIAGRAM.md  deploy.sh  firestore.indexes.json  firestore.rules  terraform.tfstate
.github/workflows/: deploy.yml  terraform.yml
scripts/: create-secrets.sh  handle_existing_resources.sh  setup-terraform-backend.sh  setup-workload-identity.sh  terraform-pr-comment.js
src/: config.rs  firestore.rs  jupiter.rs  line_bot.rs  main.rs  service.rs  trading.rs  wallet.rs
terraform/: .terraform.lock.hcl  README.md  WORKLOAD_IDENTITY.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/docker-build/: main.tf  outputs.tf  variables.tf
terraform/modules/firestore/: main.tf  outputs.tf  variables.tf
terraform/modules/scheduler/: main.tf  outputs.tf  variables.tf
terraform/modules/secret-manager/: main.tf  outputs.tf  variables.tf
terraform/modules/service-accounts/: main.tf  outputs.tf  variables.tf
