[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
spl-associated-token-account = "3.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Base58 encoding
bs58 = "0.5"

# Big number operations
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Jupiter integration
anchor-client = "0.29"
anchor-lang = "0.29"

# Web server for Cloud Run
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Base64 encoding/decoding
base64 = "0.21"

# Binary serialization
bincode = "1.3"

# Google Cloud Auth
gcp_auth = "0.10"

# Additional async utilities for database operations
futures = "0.3"

# UUID for generating unique IDs
uuid = { version = "1.6", features = ["v4", "serde"] }